funcionalitats basiques funcionant

--- a/app/views/issues/_form.html.erb
+++ b/app/views/issues/_form.html.erb
@@ -27,8 +27,8 @@
   </div>
 
   <div>
-    <%= form.label :type, style: "display: block" %>
-    <%= form.number_field :type %>
+    <%= form.label :issue_type, style: "display: block" %>
+    <%= form.number_field :issue_type %>
   </div>
 
   <div>
