--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,10 +19,23 @@
 
     <%# Includes all stylesheet files in app/assets/stylesheets %>
     <%= stylesheet_link_tag :app, "data-turbo-track": "reload" %>
-    <%= javascript_importmap_tags %>
   </head>
 
+
+  <%#COSAS NUEVAS %>
   <body>
+    <nav>
+      <% if user_signed_in? %>
+        <%= button_to 'Cerrar sesión', destroy_user_session_path, method: :delete %>
+
+      <% else %>
+        <%= link_to 'Iniciar sesión', new_user_session_path %>
+
+        <%#REVISAR#!!!!!!!!!!!!!!!!!!!!!!!1%>
+        <%= link_to 'Registrarse', new_user_registration_path %>
+      <% end %>
+    </nav>
+
     <%= yield %>
   </body>
 </html>
