--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,6 +5,8 @@
 <div>
   <%= link_to "Edit this user", edit_user_path(@user) %> |
   <%= link_to "Back to users", users_path %>
+  <%= link_to 'Cerrar sesión', destroy_user_session_path, method: :delete %>
 
   <%= button_to "Destroy this user", @user, method: :delete %>
+
 </div>
