--- a/app/views/issues/index.html.erb
+++ b/app/views/issues/index.html.erb
@@ -21,9 +21,9 @@
   }
 
   .plus-sign {
-    font-size: 25px; /* Aumenta el tamaño del "+" */
+    font-size: 25px;
     font-weight: 500;
-    margin-right: 8px; /* Mueve el "+" más a la izquierda separándolo del texto */
+    margin-right: 8px;
     display: inline-block;
     position: relative;
     top: 1px;
@@ -31,44 +31,34 @@
   }
 
   .table {
-    border-collapse: separate;  /* Evitar que las celdas se fusionen */
-    border-spacing: 0 15px; /* Espacio entre las filas */
+    border-collapse: separate;
+    border-spacing: 0 15px;
     width: 100%;
   }
 
   .table tbody tr {
-    background-color: #f8f9fa; /* Fondo gris claro */
-    border: 1px solid #ddd; /* Borde gris claro para toda la fila */
+    background-color: #f8f9fa;
+    border: 1px solid #ddd;
   }
 
   .table tbody tr td {
-    padding: 12px; /* Espaciado interno */
-    background-color: transparent; /* Asegura que solo la fila tenga el fondo gris */
-    vertical-align: middle; /* Alineación vertical para mejor visibilidad */
+    padding: 12px;
+    background-color: transparent;
+    vertical-align: middle;
   }
 
-  .table tbody tr:first-child td:first-child {
+  .table tbody tr td:first-child {
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
   }
 
-  .table tbody tr:first-child td:last-child {
-    border-top-right-radius: 10px;
-    border-bottom-right-radius: 10px;
-  }
-
-  .table tbody tr:last-child td:first-child {
-    border-top-left-radius: 10px;
-    border-bottom-left-radius: 10px;
-  }
-
-  .table tbody tr:last-child td:last-child {
+  .table tbody tr td:last-child {
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
   }
 
   .table-responsive {
-    margin-left: 15px; /* Añadir margen a la izquierda */
+    margin-left: 15px;
   }
 </style>
 
