--- a/app/views/issues/index.html.erb
+++ b/app/views/issues/index.html.erb
@@ -63,7 +63,7 @@
 </style>
 
 <div class="container-fluid mt-4">
-    <p style="color: green"><%= notice %></p>
+    <p style="color: green"><%#= notice %></p>
 
   <h1 class="mb-4" style="color: #0085A1; font-family: 'Arial', sans-serif; font-weight: bold;">Issues</h1>
 
