--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -453,3 +453,175 @@ nav a {
   align-items: center;
   margin-left: auto;
 }
+
+.custom-btn-container {
+    display: flex;
+    justify-content: flex-end;
+    margin-bottom: 20px;
+    margin-right: 100px;
+  }
+
+  .custom-btn {
+    background-color: #98F5E1;
+    color: black;
+    padding: 6px 12px;
+    border-radius: 4px;
+    font-weight: 530;
+    width: 120px;
+    text-align: center;
+    text-transform: uppercase;
+    text-decoration: none;
+    font-family: Arial, sans-serif;
+    transition: background-color 0.3s ease, color 0.3s ease;
+    float: right;
+    margin-bottom: 20px;
+  }
+
+  .custom-btn:hover {
+    background-color: #0085A1;
+    color: white;
+  }
+
+  .plus-sign {
+    font-size: 25px;
+    font-weight: 500;
+    margin-right: 8px;
+    display: inline-block;
+    position: relative;
+    top: 1px;
+    display: inline-block;
+  }
+
+  .table-container {
+    margin-right: 20px;
+    margin-left: 20px;
+    overflow-x: auto;
+  }
+
+  .table {
+    border-collapse: separate;
+    border-spacing: 0 15px;
+    width: 100%;
+  }
+
+  .table thead th {
+    text-transform: uppercase;
+    color: #4a4a4a;
+    font-family: Arial, sans-serif;
+    font-weight: normal;
+    font-size: 14px;
+  }
+
+  .table thead th.issue-column {
+    text-align: left;
+  }
+
+  .table tbody td {
+    font-family: Arial, sans-serif;
+    font-weight: normal;
+    text-align: left;
+  }
+
+  .table tbody tr {
+    background-color: #f8f9fa;
+    border: 1px solid #ddd;
+  }
+
+  .table tbody tr td {
+    padding: 12px;
+    background-color: transparent;
+    vertical-align: middle;
+  }
+
+  .table tbody tr td:first-child {
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+  }
+
+  .table tbody tr td:last-child {
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+  }
+
+  .table thead th:nth-child(1),
+  .table tbody td:nth-child(1),
+  .table thead th:nth-child(2),
+  .table tbody td:nth-child(2),
+  .table thead th:nth-child(3),
+  .table tbody td:nth-child(3),
+  .table thead th:nth-child(5),
+  .table tbody td:nth-child(5) {
+    width: 12%;
+  }
+
+  .table thead th:nth-child(4),
+  .table tbody td:nth-child(4) {
+    width: 50%;
+  }
+
+  .table thead th:nth-child(6),
+  .table tbody td:nth-child(6) {
+    width: 14%;
+  }
+
+  .table thead th:nth-child(7),
+  .table tbody td:nth-child(7) {
+    width: 16%;
+  }
+
+  .table tbody tr:hover {
+    background-color: #e0e0e0;
+    transition: background-color 0.3s ease;
+  }
+
+  .issue-id {
+    color: #0085A1;
+  }
+
+  .issue-title {
+    color: black;
+    text-decoration: none;
+  }
+
+  td:hover .issue-id {
+    color: black;
+  }
+
+  td:hover .issue-title {
+    color: #0085A1;
+  }
+
+  .no-issues-container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+.no-issues-text {
+  color: #7a7a7a;
+  font-size: 14px;
+  font-family: Arial, sans-serif;
+  margin-bottom: 15px;
+}
+
+.no-issues-button {
+  color: #0085A1;
+  font-size: 18px;
+  font-weight: bold;
+  text-decoration: none;
+  border: none;
+  background: none;
+  cursor: pointer;
+}
+
+.no-issues-button:hover {
+  text-decoration: underline;
+}
+
+.no-issues-button:hover {
+  color: #4a4a4a;
+  text-decoration: none;
+}
+
